--- a/styles.css
+++ b/styles.css
@@ -93,14 +93,14 @@ html, body {
 }
 .nav__lang__container:hover .nav__lang--ul {
   max-height: 200%;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 .nav__lang__container:hover .nav__arrow-img {
   -webkit-transform: rotate(-180deg);
           transform: rotate(-180deg);
-  -webkit-transition: ease-in-out 0.3s;
-  transition: ease-in-out 0.3s;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
 .nav__lang--ul {
@@ -837,14 +837,14 @@ html, body {
 }
 .nav__lang__container:hover .nav__lang--ul {
   max-height: 200%;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 .nav__lang__container:hover .nav__arrow-img {
   -webkit-transform: rotate(-180deg);
           transform: rotate(-180deg);
-  -webkit-transition: ease-in-out 0.3s;
-  transition: ease-in-out 0.3s;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
 .nav__lang--ul {
@@ -1438,6 +1438,145 @@ html, body {
 }
 
 /* ---------------- MEDIA QUERIES ------------------- */
+/* ---------------- WIDTH 1024px --------------------- */
+@media only screen and (max-width: 1024px) {
+  .container-fluid {
+    -webkit-box-pack: justify !important;
+        -ms-flex-pack: justify !important;
+            justify-content: space-between !important;
+    z-index: 2;
+  }
+  .nav__bar {
+    padding: 22px;
+  }
+  .nav__clickable {
+    display: none;
+  }
+  .nav__logo {
+    height: 52px;
+  }
+  .nav__logo img {
+    width: 144px;
+    margin-right: 50px;
+    margin-left: 70px;
+  }
+  .nav__links {
+    list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .nav__links__container {
+    justify-items: end;
+  }
+  .navbar-expand-lg .navbar-nav {
+    margin-right: 0;
+  }
+  .nav__link {
+    font-size: 16px;
+  }
+  .services__section {
+    margin: 48px auto;
+    width: 95%;
+  }
+  .services__heading {
+    font-size: 45px;
+  }
+  .services__icons--icon--first {
+    margin: 8px;
+    width: 144px;
+    height: 144px;
+  }
+  .services__icons--icon--second {
+    margin: 8px;
+    width: 144px;
+    height: 144px;
+  }
+  .contact__section {
+    padding: 38px 0 48px 0;
+  }
+  .contact__heading {
+    font-size: 35px;
+    margin-bottom: 35px;
+  }
+  .contact__form__container {
+    margin: 0 auto;
+    width: 496px;
+    height: 676px;
+    border-radius: 10px;
+    background-color: #FFFFFF;
+    -webkit-box-shadow: 4px 4px 8px #C8C8C8;
+            box-shadow: 4px 4px 8px #C8C8C8;
+  }
+  .contact__form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .contact__inputs {
+    font-size: 14px;
+    width: 348px;
+  }
+  .contact__inputs--radio {
+    width: 348px;
+    margin: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .contact__inputs--text {
+    font-size: 14px;
+    width: 348px;
+    height: 161px;
+  }
+  .contact__rodo {
+    width: 218px;
+  }
+  .contact__submit {
+    width: 248px;
+    margin: 25px;
+  }
+  .newsletter__section {
+    margin: 0;
+    padding: 45px 0;
+  }
+  .newsletter__heading {
+    width: 200px;
+    height: 81px;
+    font-size: 28px;
+  }
+  .footer__container {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-line-pack: center;
+        align-content: center;
+  }
+  .footer__social__container {
+    margin: 0 100px;
+  }
+  .footer__logo__container {
+    margin: 0 100px;
+  }
+}
 /* ---------------- WIDTH 768px --------------------- */
 @media only screen and (max-width: 768px) {
   .container-fluid {
@@ -1461,8 +1600,7 @@ html, body {
     margin-left: 0;
   }
   .nav__lang__container {
-    margin-left: 331px;
-    margin-top: 70px;
+    margin: 70px auto 0;
   }
   .navbar-expand-lg .navbar-nav {
     margin-right: 0;
@@ -1485,8 +1623,6 @@ html, body {
     background-color: rgba(255, 255, 255, 0.8);
     -webkit-backdrop-filter: blur(8px);
             backdrop-filter: blur(8px);
-    -webkit-transition: ease-out 0.3s;
-    transition: ease-out 0.3s;
   }
   .pictures__container {
     grid-template-columns: repeat(2, 1fr);
@@ -1595,14 +1731,16 @@ html, body {
     margin: 0 100px;
   }
 }
-/* --------------- WIDTH 400px ----------------- */
-@media only screen and (max-width: 400px) {
+/* --------------- WIDTH 425px ----------------- */
+@media only screen and (max-width: 425px) {
   .nav__bar {
     padding: 22px;
   }
+  .nav__logo {
+    margin-right: 0;
+  }
   .nav__lang__container {
-    margin-left: 134px;
-    margin-top: 70px;
+    margin: 70px auto 0;
   }
   .pictures__container {
     grid-template-columns: repeat(1, 1fr);
@@ -1670,6 +1808,10 @@ html, body {
   }
   .contact__submit {
     width: 248px;
+  }
+  .container-fluid {
+    -ms-flex-wrap: nowrap !important;
+        flex-wrap: nowrap !important;
   }
   .footer__container {
     -webkit-box-orient: vertical;
