--- a/styles/_mediaQueries.scss
+++ b/styles/_mediaQueries.scss
@@ -166,7 +166,7 @@
 		position: absolute;
 		width: 100%;
 		top: 104px;
-		height: 544px !important;
+		height: 600px !important;
 		background-color: rgba(255,255,255,0.8);
 		backdrop-filter: blur(8px);
 	}
@@ -234,12 +234,19 @@
 		width: 348px;
 		height: 161px;
 	}
+	.container-fluid{
+		display: flex;
+		flex-direction: column;
+	}
 	.contact__rodo {
 		width: 218px;
 	}
 	.contact__submit {
 		width: 248px;
 		margin: 25px;
+	}
+	.nav__links{
+		margin-top: 20px;
 	}
 	.newsletter__section {
 		margin: 0;
@@ -259,6 +266,10 @@
 	}
 	.footer__logo__container {
 		margin: 0 100px;
+	}
+	.logo_btn{
+		display: flex;
+		justify-content: end;
 	}
 }
 /* --------------- WIDTH 425px ----------------- */
