--- a/styles.css
+++ b/styles.css
@@ -1616,13 +1616,13 @@ html, body {
     font-size: 23px;
   }
   .collapse {
-    position: absolute;
-    width: 100%;
-    top: 104px;
-    height: 600px !important;
-    background-color: rgba(255, 255, 255, 0.8);
-    -webkit-backdrop-filter: blur(8px);
-            backdrop-filter: blur(8px);
+    position: static;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+  }
+  .show {
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
   }
   .pictures__container {
     grid-template-columns: repeat(2, 1fr);
