--- a/styles/_mediaQueries.scss
+++ b/styles/_mediaQueries.scss
@@ -163,12 +163,11 @@
 		font-size: 23px;
 	}
 	.collapse {
-		position: absolute;
-		width: 100%;
-		top: 104px;
-		height: 600px !important;
-		background-color: rgba(255,255,255,0.8);
-		backdrop-filter: blur(8px);
+		position: static;
+		transition: all 0.3s;
+	}
+	.show{
+		transition: all 0.3s;
 	}
 	
 	.pictures__container {
